fix: primary and secondary menu alignments [closes #1266]

--- a/assets/scss/elements/navigation/_nav-menu.scss
+++ b/assets/scss/elements/navigation/_nav-menu.scss
@@ -89,6 +89,20 @@ ul[id^="nv-primary-navigation"] .current-menu-item > a {
 }
 
 @mixin nav-menu--laptop() {
+  .primary-menu-ul, #secondary-menu {
+    .hfg-item-left &, .hfg-item-center & {
+      li:not(:last-child) {
+        padding-right: $spacing-sm;
+      }
+    }
+
+    .hfg-item-right & {
+      li:not(:first-child) {
+        padding-left: $spacing-sm;
+      }
+    }
+  }
+
   .row {
     .nv-nav-wrap {
       flex-direction: row;
@@ -122,14 +136,11 @@ ul[id^="nv-primary-navigation"] .current-menu-item > a {
       overflow-y: inherit;
       max-height: inherit;
       margin-left: auto;
-      justify-content: flex-start;
 
       > li {
         width: inherit;
         padding: 10px 0;
-        &:not(:last-child) {
-         padding-right: $spacing-sm;
-        }
+
         > a {
           display: flex;
           align-items: center;
@@ -166,10 +177,12 @@ ul[id^="nv-primary-navigation"] .current-menu-item > a {
         z-index: 100;
         opacity: 0;
         visibility: hidden;
+
         &.dropdown-open {
           opacity: 1;
           visibility: visible;
         }
+
         .sub-menu {
           left: 100%;
           right: auto;
