--- a/header-footer-grid/assets/scss/frontend/components/_nav-menus.scss
+++ b/header-footer-grid/assets/scss/frontend/components/_nav-menus.scss
@@ -80,7 +80,6 @@
     width: inherit;
     a {
       text-align: center;
-      padding: 0 10px;
       font-weight: 500;
     }
     &:last-of-type a {
