--- a/style-rtl.css
+++ b/style-rtl.css
@@ -5,7 +5,7 @@ Theme URI:      https://themeisle.com/themes/neve/
 Author:         ThemeIsle
 Author URI:     https://themeisle.com
 Description:    Neve is a super fast, easily customizable, multi-purpose theme. It’s perfect for blogs, small business, startups, agencies, firms, e-commerce shops (WooCommerce storefront) as well as personal portfolio sites and most types of projects. A fully AMP optimized and responsive theme, Neve will load in mere seconds and adapt perfectly on any viewing device. While it is lightweight and has a minimalist design, the theme is highly extendable, it has a highly SEO optimized code, resulting in top rankings in Google search results. Neve works perfectly with Gutenberg and the most popular page builders (Elementor, Brizy, Beaver Builder, Visual Composer, SiteOrigin, Divi). Neve is also WooCommerce ready, responsive, RTL & translation ready. Look no further. Neve is the perfect theme for you!
-Version:        2.5.5
+Version:        2.6.0
 License:        GNU General Public License v2 or later
 License URI:    http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain:    neve
@@ -2114,6 +2114,12 @@ audio {
   .nv-empty-sidebar .neve-main > .container .col {
     max-width: 100%;
   }
+  .hfg-item-left .primary-menu-ul li:not(:last-child), .hfg-item-center .primary-menu-ul li:not(:last-child), .hfg-item-left #secondary-menu li:not(:last-child), .hfg-item-center #secondary-menu li:not(:last-child) {
+    padding-left: 20px;
+  }
+  .hfg-item-right .primary-menu-ul li:not(:first-child), .hfg-item-right #secondary-menu li:not(:first-child) {
+    padding-right: 20px;
+  }
   .row .nv-nav-wrap {
     flex-direction: row;
     align-items: center;
@@ -2140,14 +2146,10 @@ audio {
     overflow-y: inherit;
     max-height: inherit;
     margin-right: auto;
-    justify-content: flex-start;
   }
   .row .primary-menu-ul > li {
     width: inherit;
     padding: 10px 0;
-  }
-  .row .primary-menu-ul > li:not(:last-child) {
-    padding-left: 20px;
   }
   .row .primary-menu-ul > li > a {
     display: flex;
@@ -2519,7 +2521,7 @@ audio {
   text-align: left;
 }
 
-.hfg-item-right #secondary-menu, .hfg-item-right .nv-nav-wrap, .hfg-item-right .component-wrap, .hfg-item-right .site-logo, .hfg-item-right .nv-search-icon-component .nv-search, .hfg-item-right .builder-item--footer-menu {
+.hfg-item-right #secondary-menu, .hfg-item-right .primary-menu-ul, .hfg-item-right .nv-nav-wrap, .hfg-item-right .component-wrap, .hfg-item-right .site-logo, .hfg-item-right .nv-search-icon-component .nv-search, .hfg-item-right .builder-item--footer-menu {
   justify-content: flex-end;
 }
 
@@ -2531,7 +2533,7 @@ audio {
   text-align: right;
 }
 
-.hfg-item-left #secondary-menu, .hfg-item-left .nv-nav-wrap, .hfg-item-left .component-wrap, .hfg-item-left .site-logo, .hfg-item-left .nv-search-icon-component .nv-search, .hfg-item-left .builder-item--footer-menu {
+.hfg-item-left #secondary-menu, .hfg-item-left .primary-menu-ul, .hfg-item-left .nv-nav-wrap, .hfg-item-left .component-wrap, .hfg-item-left .site-logo, .hfg-item-left .nv-search-icon-component .nv-search, .hfg-item-left .builder-item--footer-menu {
   justify-content: flex-start;
 }
 
@@ -2543,7 +2545,7 @@ audio {
   text-align: center;
 }
 
-.hfg-item-center #secondary-menu, .hfg-item-center .nv-nav-wrap, .hfg-item-center .component-wrap, .hfg-item-center .site-logo, .hfg-item-center .nv-search-icon-component .nv-search, .hfg-item-center .builder-item--footer-menu {
+.hfg-item-center #secondary-menu, .hfg-item-center .primary-menu-ul, .hfg-item-center .nv-nav-wrap, .hfg-item-center .component-wrap, .hfg-item-center .site-logo, .hfg-item-center .nv-search-icon-component .nv-search, .hfg-item-center .builder-item--footer-menu {
   justify-content: center;
 }
 
@@ -3050,7 +3052,6 @@ body.menu_sidebar_slide_left.menu_sidebar_dropdown:before {
 
 #secondary-menu li a {
   text-align: center;
-  padding: 0 10px;
   font-weight: 500;
 }
 
