--- a/style.css
+++ b/style.css
@@ -2114,6 +2114,12 @@ audio {
   .nv-empty-sidebar .neve-main > .container .col {
     max-width: 100%;
   }
+  .hfg-item-left .primary-menu-ul li:not(:last-child), .hfg-item-center .primary-menu-ul li:not(:last-child), .hfg-item-left #secondary-menu li:not(:last-child), .hfg-item-center #secondary-menu li:not(:last-child) {
+    padding-right: 20px;
+  }
+  .hfg-item-right .primary-menu-ul li:not(:first-child), .hfg-item-right #secondary-menu li:not(:first-child) {
+    padding-left: 20px;
+  }
   .row .nv-nav-wrap {
     flex-direction: row;
     align-items: center;
@@ -2140,14 +2146,10 @@ audio {
     overflow-y: inherit;
     max-height: inherit;
     margin-left: auto;
-    justify-content: flex-start;
   }
   .row .primary-menu-ul > li {
     width: inherit;
     padding: 10px 0;
-  }
-  .row .primary-menu-ul > li:not(:last-child) {
-    padding-right: 20px;
   }
   .row .primary-menu-ul > li > a {
     display: flex;
@@ -2519,7 +2521,7 @@ audio {
   text-align: right;
 }
 
-.hfg-item-right #secondary-menu, .hfg-item-right .nv-nav-wrap, .hfg-item-right .component-wrap, .hfg-item-right .site-logo, .hfg-item-right .nv-search-icon-component .nv-search, .hfg-item-right .builder-item--footer-menu {
+.hfg-item-right #secondary-menu, .hfg-item-right .primary-menu-ul, .hfg-item-right .nv-nav-wrap, .hfg-item-right .component-wrap, .hfg-item-right .site-logo, .hfg-item-right .nv-search-icon-component .nv-search, .hfg-item-right .builder-item--footer-menu {
   justify-content: flex-end;
 }
 
@@ -2531,7 +2533,7 @@ audio {
   text-align: left;
 }
 
-.hfg-item-left #secondary-menu, .hfg-item-left .nv-nav-wrap, .hfg-item-left .component-wrap, .hfg-item-left .site-logo, .hfg-item-left .nv-search-icon-component .nv-search, .hfg-item-left .builder-item--footer-menu {
+.hfg-item-left #secondary-menu, .hfg-item-left .primary-menu-ul, .hfg-item-left .nv-nav-wrap, .hfg-item-left .component-wrap, .hfg-item-left .site-logo, .hfg-item-left .nv-search-icon-component .nv-search, .hfg-item-left .builder-item--footer-menu {
   justify-content: flex-start;
 }
 
@@ -2543,7 +2545,7 @@ audio {
   text-align: center;
 }
 
-.hfg-item-center #secondary-menu, .hfg-item-center .nv-nav-wrap, .hfg-item-center .component-wrap, .hfg-item-center .site-logo, .hfg-item-center .nv-search-icon-component .nv-search, .hfg-item-center .builder-item--footer-menu {
+.hfg-item-center #secondary-menu, .hfg-item-center .primary-menu-ul, .hfg-item-center .nv-nav-wrap, .hfg-item-center .component-wrap, .hfg-item-center .site-logo, .hfg-item-center .nv-search-icon-component .nv-search, .hfg-item-center .builder-item--footer-menu {
   justify-content: center;
 }
 
@@ -3050,7 +3052,6 @@ body.menu_sidebar_slide_left.menu_sidebar_dropdown:before {
 
 #secondary-menu li a {
   text-align: center;
-  padding: 0 10px;
   font-weight: 500;
 }
 
